--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>BED HOSPITALITY — Self Assessment Clean Baseline</title>
 <style>
-  /* Global */
   * { box-sizing: border-box; }
   body {
     font-family: system-ui, Arial, sans-serif;
@@ -13,11 +12,11 @@
     color: #111;
     margin: 0;
   }
-  /* Container: 20px left/right on ALL pages */
+  /* Apply 20px left/right margin to ALL pages */
   .container {
     width: 100%;
-    margin: 0;
-    padding: 24px 20px; /* 20px from viewport border on both sides */
+    margin: 0 auto;
+    padding: 24px 20px;
   }
 
   /* Headers */
@@ -29,25 +28,25 @@
   .row {
     display: flex;
     align-items: center;
-    gap: 6px;            /* bring field closer to label */
     margin: 10px 0;
   }
   .row > label {
-    width: 140px;        /* fixed label width → equal field sizes */
-    font-weight: 400;    /* not bold */
+    width: 120px;
+    font-weight: 400;
     font-size: 10pt;
-    flex: 0 0 140px;
+    margin-right: 4px;
+    text-align: left;
   }
   .row > input,
   .row > select {
-    flex: 1 1 auto;      /* fields extend to the right edge */
-    padding: 8px 10px;
+    flex: 1;
     font-size: 10pt;
+    padding: 8px 10px;
+    width: 100%;
   }
-  /* Placeholder styling for selects */
+
   select:invalid { color: #aaa; font-size: 10pt; }
 
-  /* Questions UI */
   .q-item { padding: 12px 0; border-top: 1px solid #ddd; }
   .pill {
     display: inline-block; width: 32px; height: 32px; line-height: 32px;
@@ -61,7 +60,6 @@
     background: #fff; cursor: pointer;
   }
 
-  /* Section spacing across pages */
   #welcome, #q1, #q2 { margin-top: 8px; }
 </style>
 <script id="embeddedQuestions" type="application/json">[
