--- a/index.html
+++ b/index.html
@@ -6,53 +6,42 @@
 <title>BED HOSPITALITY — Self Assessment Clean Baseline</title>
 <style>
   * { box-sizing: border-box; }
-  body { font-family: system-ui, Arial, sans-serif; background:#F9FAFB; color:#111; margin:0; }
+  body { font-family: system-ui, Arial, sans-serif; background:#F9FAFB; color:#434343; margin:0; }
 
-  /* Apply equal 20px margins on ALL pages */
   .container { width:100%; margin:0; padding:24px 20px; }
 
-  /* Headers (from earlier steps) */
-  h1 { font-size:20pt; margin:0 0 8px 0; line-height:1.2; }
-  .subheader { font-size:18pt; margin:0 0 20px 0; font-weight:500; }
-  h2 { font-size:14pt; margin:22px 0 10px 0; line-height:1.25; }
+  /* Headers */
+  h1 { font-size:22pt; margin:0 0 8px 0; line-height:1.2; color:#434343; }
+  .subheader { font-size:18pt; font-weight:bold; margin:0 0 20px 0; color:#434343; }
+  h2 { font-size:14pt; margin:22px 0 10px 0; line-height:1.25; color:#434343; }
 
-  /* Base row layout (desktop/tablet) */
+  /* Add blank line after page headers */
+  h2::after { content:""; display:block; margin-bottom:10px; }
+
+  /* Form rows */
   .row {
     display: grid;
-    grid-template-columns: 150px 1fr;   /* fixed label + flexible field */
+    grid-template-columns: 150px 1fr;
     align-items: center;
-    column-gap: 6px;                    /* default gap */
+    column-gap: 6px;
     margin: 10px 0;
   }
-  .row > label { font-weight:400; font-size:10pt; }
+  .row > label { font-weight:400; font-size:10pt; color:#434343; }
   .row > input,
-  .row > select { width:100%; padding:8px 10px; font-size:10pt; }
-
-  /* Mobile optimization: widen fields, reduce whitespace, keep 20px right margin */
-  @media (max-width: 480px) {
-    .row {
-      grid-template-columns: 110px 1fr; /* narrower label => wider field */
-      column-gap: 4px;                  /* reduce space between label & field */
-      margin: 10px 0;
-    }
-    .row > label { font-size:10pt; }
-    .row > input, .row > select { font-size:10pt; }
-  }
+  .row > select { width:100%; padding:8px 10px; font-size:10pt; color:#434343; }
 
   /* Placeholder styling for selects */
   select:invalid { color:#aaa; font-size:10pt; }
 
-  /* Questions UI */
-  .q-item { padding:12px 0; border-top:1px solid #ddd; }
+  .q-item { padding:12px 0; border-top:1px solid #ddd; color:#434343; }
   .pill {
     display:inline-block; width:32px; height:32px; line-height:32px; text-align:center;
-    border:1px solid #ccc; border-radius:50%; margin-right:6px; cursor:pointer; user-select:none;
+    border:1px solid #ccc; border-radius:50%; margin-right:6px; cursor:pointer; user-select:none; color:#434343;
   }
   .pill.selected { background:#1E90FF; color:#fff; }
 
-  button { padding:10px 14px; border:1px solid #ccc; border-radius:10px; background:#fff; cursor:pointer; }
+  button { padding:10px 14px; border:1px solid #ccc; border-radius:10px; background:#fff; cursor:pointer; color:#434343; }
 
-  /* Ensure sections on all pages sit under headers consistently */
   #welcome, #q1, #q2 { margin-top:8px; }
 </style>
 <script id="embeddedQuestions" type="application/json">[
@@ -244,7 +233,7 @@
       <div class="row"><label for="email">your email</label><input id="email" type="email"></div>
       <div class="row"><label for="hotel">your location</label>
         <select id="hotel" required>
-          <option value="" disabled selected>select</option>
+          <option value="" disabled selected>select hotel</option>
           <option>BED Changkian</option>
           <option>BED Phrasing</option>
           <option>BED Nimman</option>
@@ -259,7 +248,7 @@
       <div class="row"><label for="peerEmail">email peer</label><input id="peerEmail" type="email"></div>
       <div class="row"><label for="peerHotel">peer location</label>
         <select id="peerHotel" required>
-          <option value="" disabled selected>select</option>
+          <option value="" disabled selected>select hotel</option>
           <option>BED Changkian</option>
           <option>BED Phrasing</option>
           <option>BED Nimman</option>
