--- a/index.html
+++ b/index.html
@@ -6,45 +6,53 @@
 <title>BED HOSPITALITY — Self Assessment Clean Baseline</title>
 <style>
   * { box-sizing: border-box; }
+  :root{
+    --side-pad:20px;
+    --label-w:120px;     /* fixed label width for alignment */
+    --gap:15px;          /* ~15px space between label and field */
+  }
   body {
     font-family: system-ui, Arial, sans-serif;
     background: #F9FAFB;
     color: #111;
     margin: 0;
   }
+  /* 20px left/right margins on ALL pages */
   .container {
     width: 100%;
     margin: 0;
-    padding: 24px 20px;
+    padding: 24px var(--side-pad);
   }
+
+  /* Headers */
   h1 { font-size: 20pt; margin: 0 0 8px 0; line-height: 1.2; }
   .subheader { font-size: 18pt; margin: 0 0 20px 0; font-weight: 500; }
   h2 { font-size: 14pt; margin: 22px 0 10px 0; line-height: 1.25; }
 
+  /* Form rows */
   .row {
     display: flex;
     align-items: center;
-    gap: 6px;
-    margin: 10px 0;
+    gap: var(--gap);      /* ~15px between label and field */
+    margin: 12px 0;
   }
   .row > label {
-    width: 140px;
-    font-weight: 400;
+    flex: 0 0 var(--label-w);  /* fixed label width keeps vertical alignment */
+    width: var(--label-w);
+    font-weight: 400;          /* remove bold */
     font-size: 10pt;
-    flex: 0 0 140px;
   }
   .row > input,
   .row > select {
-    flex: 0 0 calc(100% - 140px - 6px);
+    flex: 1 1 auto;            /* fields extend to right edge */
     padding: 8px 10px;
     font-size: 10pt;
-    max-width: none;
   }
-  .wide-field {
-    width: 120%;
-  }
+
+  /* Placeholder styling for selects */
   select:invalid { color: #aaa; font-size: 10pt; }
 
+  /* Questions UI */
   .q-item { padding: 12px 0; border-top: 1px solid #ddd; }
   .pill {
     display: inline-block; width: 32px; height: 32px; line-height: 32px;
@@ -57,6 +65,8 @@
     padding: 10px 14px; border: 1px solid #ccc; border-radius: 10px;
     background: #fff; cursor: pointer;
   }
+
+  /* Section spacing across pages */
   #welcome, #q1, #q2 { margin-top: 8px; }
 </style>
 <script id="embeddedQuestions" type="application/json">[
@@ -244,10 +254,10 @@
 
     <div id="welcome">
       <h2>Your Information</h2>
-      <div class="row"><label for="nick">your name</label><input id="nick" class="wide-field"></div>
-      <div class="row"><label for="email">your email</label><input id="email" type="email" class="wide-field"></div>
+      <div class="row"><label for="nick">your name</label><input id="nick"></div>
+      <div class="row"><label for="email">your email</label><input id="email" type="email"></div>
       <div class="row"><label for="hotel">your location</label>
-        <select id="hotel" required class="wide-field">
+        <select id="hotel" required>
           <option value="" disabled selected>select hotel</option>
           <option>BED Changkian</option>
           <option>BED Phrasing</option>
@@ -259,10 +269,10 @@
       </div>
 
       <h2>Peer Information</h2>
-      <div class="row"><label for="peerName">name peer</label><input id="peerName" class="wide-field"></div>
-      <div class="row"><label for="peerEmail">email peer</label><input id="peerEmail" type="email" class="wide-field"></div>
+      <div class="row"><label for="peerName">name peer</label><input id="peerName"></div>
+      <div class="row"><label for="peerEmail">email peer</label><input id="peerEmail" type="email"></div>
       <div class="row"><label for="peerHotel">peer location</label>
-        <select id="peerHotel" required class="wide-field">
+        <select id="peerHotel" required>
           <option value="" disabled selected>select hotel</option>
           <option>BED Changkian</option>
           <option>BED Phrasing</option>
